working on proposal

--- a/developing mind/proposal developing mind.tex
+++ b/developing mind/proposal developing mind.tex
@@ -5,7 +5,9 @@
 \documentclass[12pt,\papersize]{extarticle}
 % extarticle is like article but can handle 8pt, 9pt, 10pt, 11pt, 12pt, 14pt, 17pt, and 20pt text
 
-\def \ititle {The Developing Mind: A philosophical introduction to issues in cognitive development}
+\def \ititle {The Developing Mind: \\ {A philosophical introduction to %issues in 
+cognitive development}
+}
 \def \isubtitle {-- Book Proposal --}
 \def \iauthor {Stephen A. Butterfill}
 \def \iemail{s.butterfill@warwick.ac.uk}
@@ -54,28 +56,33 @@ colours,
 actions
 and
 minds? 
-The question goes back to Plato or earlier and remains unanswered.
+This question goes back to Plato or earlier and remains unanswered.
 %Philosophers have been pursuing this question since Plato or before. 
 %More recently it has become the focus of a branch of psychology, developmental psychology.
 %So far no one has convincingly answered the question, but two major breakthroughs have been made in the last three decades or so.
-Two recent scientific breakthroughs appear to bring us closer to an answer, and to show that the question is even less straightforward than philosophers have  assumed.
+Two recent scientific breakthroughs appear to bring us closer to an answer, and to show that the question is even less straightforward than previously  assumed.
 The first breakthrough is the discovery that preverbal infants enjoy surprisingly rich social abilities, abilities which
 % begin to be built from the first months of life and 
-may well be foundational for later linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
-A second breakthrough concerns the use of increasingly sensitive---and sometimes controversial---methods to detect  sophisticated expectations concerning  causal interactions, numerosity, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
+may well facilitate the subsequent acquisition of linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
+A second breakthrough involves the use of increasingly sensitive---and sometimes controversial---methods to detect  expectations without relying on subjects' abilities to talk or act.  
+These methods have revealed sophisticated expectations about  causal interactions, numerosity, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
 These expectations or the representations and processes underpinning them arguably also enable the emergence of knowledge. 
-Although each breakthrough has been discussed at length by leading psychologists, philosophers have yet to consider either systematically in print.
-Further, the two breakthroughs are associated with different camps, one nativist and the other Vygotskian, and have rarely been considered together as identifying twin factors enabling the emergence of knowledge.
-The proposed book will familiarise readers with findings related to both breakthroughs and explain their relevance to philosophical accounts of knowledge, action and experience.  
-Most importantly, the book aims to introduce readers to  philosophical issues raised by these findings in cognitive development.
+Although each breakthrough has been discussed at length by leading psychologists, philosophers have yet to consider them systematically in print.
+Further, the two breakthroughs are associated with different camps, one nativist, the other Vygotskian.
+Perhaps for this reason the breakthrough findings have rarely been considered together as identifying twin factors enabling the emergence of knowledge.
+The proposed book aims to introduce readers to  
+%example of new---the question about simple joint action
+new philosophical issues raised by these findings  
+%example of existing question: modularity
+and to explain their relevance to longstanding philosophical questions about the mind.  
 
-
+%if we're talking about breakthroughs we'd better mention neuroscience
 Advances in neuroscience may be transforming parts of developmental psychology much as they have already transformed the study of perception and action \citep{Johnson:2005az}. 
-The proposed book focusses on discoveries rather than methods but will introduce readers to some relevant findings in developmental cognitive neuroscience along the way. 
+Although detailed discussion of neuroscientific methods is beyond its scope, the proposed book will introduce a selection of relevant findings in developmental cognitive neuroscience along the way. 
 
-The book is organised by domains of knowledge, so that one chapter concerns knowledge of objects, another focusses on  knowledge of number, and so on.  
+The proposed book is organised by domains of knowledge, so that one chapter concerns knowledge of objects, another focuses on  knowledge of number, and so on.  
 The domains are chosen so that each set of developmental findings is linked to one or more philosophical issues. 
-For instance, research on knowledge of objects gives bite to questions about modularity and the nature of tacit knowledge \citep{Davies:1989gg,Fodor:1983dg}; research on knowledge of number invites discussions of nativism \citep{Fodor:1981ep,Spelke:1998im}; and developmental findings on knowledge of colour may challenge some assumptions philosophers have made about relations between language, thought and perception \citep{Gilbert:2006yb,Regier:2009ve}.  
+For instance, research on knowledge of objects gives bite to questions about modularity and the nature of tacit knowledge \citep{Fodor:1983dg,Davies:1989gg}; research on knowledge of number invites discussions of nativism \citep{Fodor:1981ep,Spelke:1998im}; and developmental findings on knowledge of colour may challenge certain assumptions philosophers have made about relations between language, thought and perception \citep{Gilbert:2006yb,Regier:2009ve}.  
 
 
 
@@ -91,8 +98,8 @@ To this end the book will not presuppose familiarity with the philosophy of mind
 Professional philosophers whose research connects with issues in cognitive development may also find the book useful.  
 Judging by papers and manuscripts under review for journals and university presses, even those writing about cognitive development can have difficulty identifying the full range of findings relevant to their positions.
 
-Students in psychology are often drawn to philosophy and should find in this book an accessible introduction to key distinctions and arguments. 
-It might even be used for courses in developmental psychology. (I once co-taught such a course in psychology with Jim Russell in Cambridge).
+Psychology students, undergraduate and graduate, are often drawn to philosophy and should find in this book an accessible introduction to key distinctions and arguments. 
+It might  be used for courses in developmental psychology. (I once co-taught such a course in psychology with Jim Russell in Cambridge).
 
 
 
@@ -120,14 +127,14 @@ There are also several collections bringing together research by philosophers an
 \citep[e.g.][]{hirschfeld:1994_mapping,carruthers:2005_innate_structure,carruthers:2006_innate_culture,mccormack:2011_tool}.
 From the point of view of the proposed book, these provide useful sources of further reading for those who want more information on particular issues.
 
-Finally, the proposed book will complement the many excellent books which expound particular theories about the origins of knowledge; these include 
+Finally, the proposed book will complement some excellent books which expound particular theories about the origins of knowledge; these include 
 	\citet{carey:2009_origin},
 	\citet{Tomasello:1999xz},
 	\citet{Gopnik:1997xq},
 	and
 	\citet{Elman:1996zd}.
-The proposed book will include critical discussion of theories presented in these volumes.  
-It's aims are clearly distinct from any of these volume's aims: the proposed book will review a range of existing theories and explore philosophical questions they raise.  
+The proposed book will include critical discussion of theories presented in some of these  books.  
+It's aims are clearly distinct from those of these books: the proposed book will review a range of existing findings and theories and explore philosophical questions they raise.  
 
 
 
@@ -135,8 +142,8 @@ It's aims are clearly distinct from any of these volume's aims: the proposed boo
 
 
 
-\section{Contents}
-(This plan may change.)
+\section{Contents (provisional)}
+
 
 
 \subsection{Introduction}
@@ -170,12 +177,12 @@ Philosophers have much to contribute in crafting distinctions and conceptual too
 There is also much for philosophers to gain: studying what is in between mindless nature and the sorts of cognition captured by  adult humans' everyday, pre-theoretical mentalistic notions 
  will reveal things about what minds are and how they work.
 
-As well as explaining how research on developing minds bears on some existing philosophical issues and raises some new ones,
+In explaining how research on developing minds bears on some existing philosophical issues and raises some new ones,
 this chapter introduces two scientific breakthroughs that have recently furthered understanding of how knowledge might emerge in development.
 As already mentioned (in the Brief Description), the first breakthrough is the discovery that preverbal infants enjoy surprisingly rich social abilities, abilities which
 % begin to be built from the first months of life and 
 may well be foundational for later linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
-A second breakthrough concerns the use of increasingly sensitive---and sometimes controversial---methods to detect  sophisticated expectations concerning  causal interactions, numerosity, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
+A second breakthrough is the use of increasingly sensitive---and sometimes controversial---methods to detect  sophisticated expectations concerning  causal interactions, numerosity, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
 These breakthroughs are driven by researchers with conflicting theoretical positions and raise quite different issues.  
 But they both  identify ingredients necessary for understanding the developmental origins of human knowledge.
 
@@ -191,12 +198,12 @@ Relatedly, many theoretical accounts of social interaction presuppose linguistic
 To overcome this difficulty we shall review evidence for a package of social abilities manifested in preverbal infants.
 These include imitation, which can occur just days and even minutes after birth \citep{meltzoff:1977_imitation,field:1982_imitation,meltzoff:1983_newborn}, 
 %for a review on imitation, see \citep{jones:2009_development}
-imitative learning, 
+imitative learning \citep{carpenter:1998_fourteen}, 
 gaze following \citep{Csibra:2008be},
 goal ascription \citep{Gergely:1995sq,Woodward:2000jw},
 social referencing \citep{Baldwin:2000qq} 
 and 
-pointing. 
+pointing \citep{Liszkowski:2006ec}.  
 Taken together, the evidence reveals that preverbal infants have surprisingly rich social abilities.
 
 The hypothesis that these social abilities enable cognitive development faces an objection. 
@@ -205,10 +212,10 @@ For instance, twelve-month old infants  will helpfully point to inform ignorant 
 Some researchers take this to show that these infants are already capable of knowing about others' knowledge and ignorance. 
 If that is right, pointing and other social abilities could play at most a limited role in explaining the developmental origins of knowledge of mind. 
 After all, we can hardly explain the emergence of something by appealing to abilities whose possession already presuppose it.
-We will encounter tools for replying to this objection in Chapters 2 (on Objects) and 6 (on Actions).
+We will encounter tools for replying to this objection in Chapters 2 (on Objects), 6 (on Actions) and 7 (on Minds).
 
-The hypothesis that social abilities enable cognitive development naturally invites a question: How could that work? 
-Some have argued that early social abilities partially explain the emergence in humans of communication by language (\citealp{tomasello:2008origins}; see Chapter 5 on Words). 
+If this objection can be overcome, how could social abilities enable cognitive development? 
+Some have argued that early social abilities partially explain the emergence in humans of communication by language (\citealp{tomasello:2008origins}; see Chapter 5 on Words below). 
 This is a valuable contribution.  
 But could social abilities also play a role in explaining the developmental origins of knowledge of things other than words---for example, in explaining the emergence of knowledge of objects, numbers, colours or minds? 
 This question comes up in one way or another in each of the following chapters.
@@ -253,7 +260,7 @@ The pattern of conflict shows that we must recognise:
 \citep[p.\ 1522]{Hood:2000bf}.
 \end{quote}
 %
-It is one thing to propose that there are multiple kinds of knowledge and quite another to make systematic sense of this possibility.
+It is one thing to propose that there are multiple kinds of knowledge, quite another to make systematic sense of this possibility.
 In this chapter we will consider attempts to do this by appeal to notions of modularity \citep{Fodor:1983dg}
 and core knowledge \citep{Spelke:2007hb}. 
 Both attempts raise further questions.  
@@ -261,18 +268,215 @@ These questions about how to make sense of the possibility that there are multip
 run through the following chapters. 
 
 
-\subsection{Chapter 3. Number: From Perceptual Experience to Knowledge}
+
+\subsection{Chapter 3. Numbers}
+
+How might abilities based on core knowledge enable the emergence in development of knowledge proper? 
+%(\textit{Knowledge proper} is knowledge not subject to the limits associated with  core knowledge.)
+In this chapter we consider answers to this question for the special case of knowledge of number.
+
+In Chapter 2 (on Objects) we saw that core knowledge of objects is manifested early in infancy, whereas more flexible abilities involving knowledge proper first appear months or even years later. 
+A similar pattern can be observed in the case of number. 
+From around five months of age or earlier, infants 
+are sensitive to the number of items in a repeatedly presented stimulus \citep{starkey:1980_perception}, 
+can sum over the number of items in a short sequence \citep{wynn:1996_infants}, 
+can discriminate between small and large sets of objects \citep{xu:2000_large}, 
+and can keep track of the precise number of items in a small set of objects following additions or subtractions \citep{wynn:1992_addition}. 
+
+Should we conclude that infants already have adult-like number concepts?  
+Limits on infants' abilities show that we should not. 
+To illustrate, 
+at around fourteen months of age infants who have seen two objects put into a box will search in it until they have recovered two objects, and infants who have seen three objects put into the box will search three times.
+But after seeing four objects placed in the box, infants usually search just once \citep{feigenson_tracking_2003}. 
+In general, infants' abilities to deal with precise numerosity are strictly limited to situations involving at most three items \citep{feigenson_tracking_2003}.
+%debate about exact number?
+It seems clear, then, that infants do not have adult-like number concepts. 
+
+The three-item limit on infants' abilities to deal with precise numerosity is the key to a revealing discovery.
+Many species besides humans have abilities to deal with precise numerosity which are also subject to limits like infants' three-item limit; this suggests that they are  closely related \citep{hauser:2003_spontaneous}.  
+%In fact, infant-like, limited abilities can also be found in human adults who have number concepts. 
+This tells us that infants' core knowledge of number is unlikely to be a product of learning \citep{feigenson:2004_core} and so supports a modest form of nativism.
+
+A bolder form nativism would insist not only that core knowledge of number is innate but also that number concepts proper are innate \citep{Fodor:1981ep}. 
+Against this bolder view, some have attempted to explain how core knowledge together with mastery of a sequence number words could explain how number concepts can be acquired \citep{carey:2009_origin}. 
+If successful, this explanation shows that not all primitive concepts are innate and provides us with one model of how core knowledge might enable the emergence of knowledge proper.
+
+
 
 \subsection{Chapter 4. Seeing and Talking about Colours}
+How do children acquire colour concepts and colour words---concepts and words for red, blue and green, say? 
+Exploring this question reveals unexpected complexity in the developmental origins of knowledge, as we will see in this chapter.
 
-\subsection{Chapter 5. Words Are Tools for Communication}
+%Frank Jackson is best known for the story of Mary, a brilliant scientist who spends the first part of her stuck in a monochrome environment learning all that can be known from books about everything including the colour blue \citep[p.\ 130]{jackson:1982_epiphenomenal}. 
+%Then one day she is set free, goes out into the world and learns something she could not have learnt from a book, namely what it is like for others to sense blue \citep[p.\ 292]{jackson:1986_what}.
+%Although the story seems fantastic, it echoes a developmental pattern. 
 
-\subsection{Chapter 6. Actions: Teleology and Mirroring Motor Awareness}
+Categorical perception of colour emerges early in infancy.  This has been demonstrated with four-month-olds using habituation \citep{Bornstein:1976of} and visual search \citep{Franklin:2005xk}.   
+%say something about ERP / oddball study \citep{Clifford:2009fo}
+Slightly older infants can make use of colour properties such as red and green to recognise objects.  
+For instance, nine-months-olds can determine whether an object they saw earlier is the same as a subsequently presented object on the basis of its colour \citep{Wilcox:2008jk}.  
+By the time they are two years old, toddlers who do not comprehend any colour terms can use colour categories implicitly in learning and using proper names; for instance, they are able to learn and use proper names for toy dinosaurs that differ only in colour \citep[][Experiment 3]{Soja:1994np}.  
+So infants and toddlers enjoy categorical perception of colour and may benefit from it in recognising and learning about objects.  
+However children only acquire concepts of, and words for, colours some time later; and colour concepts, like colour words, are acquired gradually \citep{Pitchford:2005hm,Kowalski:2006hk,Sandhofer:1999if,Sandhofer:2006qo}. 
+
+A natural hypothesis, then, is that the acquisition of colour words and concepts builds on categorical perception of colour: infants are first perceptually acquainted with colours and then learn names for them.
+And since infants enjoy categorical perception not only of colour but also of orientation \citep{franklin:2010_hemispheric}, speech \citep{Kuhl:1987la,Kuhl:2004nv,Jusczyk:1995it} and facial expressions of emotion \citep{Etcoff:1992zd,Kotsoni:2001ph,Campanella:2002aa}, 
+we might suppose that something similar holds in these cases too.
+The hypothesis, then, is that categorical perception provides `the building blocks—the elementary units—for higher-order categories' \citep[p.\ 3]{Harnad:1987ej}.
+
+This hypothesis turns out to be entirely mistaken. 
+The extensions of colour words may be subject to universal constraints but they certainly vary significantly between languages  \citep{kay:2003_resolving}.
+%can use figure from Kay & Regier 2007 Berinmo on p. 291
+The boundaries of adult humans' colour concepts and their perceptual colour categories  are influenced by the extensions of the colour words they use \citep{Kay:2006ly,Roberson:2007wg,Winawer:2007im}. 
+It is even possible to alter the boundaries of adults' perceptual categories by teaching them new colour terms
+\citep{Ozgen:2002yk}. 
+But infants' perceptual colour categories are not influenced by colour words; after all, they don't use colour words. 
+Indeed, in toddlers who have recently acquired colour terms, the extensions of their colour concepts do not match their perceptual category boundaries \citep{Franklin:2005hp}. 
+So it is a mistake to think of the development of colour words and concepts as a matter of learning to label or demonstratively refer to categories infants are already perceptually acquainted with. 
+Quite the reverse: acquiring colour words and concepts is a prerequisite for being able to perceive the colour categories they refer to.
+
+%***Something about different processes:
+%Adult-mode categorical perception of colour disappears in the face of predictable verbal interference but not non-verbal interference (*Roberson, Davies and Davidoff 2000: 985; Pilling, Wiggett, et al. 2003: 549–50; Wiggett and Davies 2008).
+%***Maybe also mention that language can play a role.
+
+Can the case of colour shed light on the question of how core knowledge enables the emergence of knowledge proper?
+There are some parallels between categorical perception and core knowledge: for instance, both phenomena are judgement-independent and have limited effects on action. 
+Indeed, there seems no less reason to postulate core knowledge of colour or speech than there is to postulate core knowledge of objects or agents. 
+So the case of colour suggests that the development of knowledge proper is not always a matter of making explicit, or building on, what was earlier implicit in core knowledge. 
+In fact core knowledge might sometimes be in competition with knowledge proper. 
+%It should not be taken for granted that the several kinds of knowledge involved in development are harmoniously integrated. 
+%Rather, core knowledge might sometimes be in competition with knowledge proper. 
+
+
+
+\subsection{Chapter 5. Words and Other Communicative Tools}
+One problem in acquiring a language is to identify which things are words; among much else, this involves working out where, in a stream of speech or gesture, one word ends and another begins.  
+In solving this problem infants may rely on statistical learning \citep{Saffran:1996aj}.
+Another problem is learning which words pick out which objects and properties; this is often called the `mapping problem'. 
+Philosophers have sometimes held that in solving this problem children rely on association (or perhaps other forms of statistical learning).
+Compare Wittgenstein (\citeyear[p.\ 77]{Wittgenstein:1972lj}): 
+%
+\begin{quote}
+`The child learns this language from the grown-ups by being trained to its use. I am using the word ``trained'' in a way strictly analogous to that in which we talk of an animal being trained to do certain things. It is done by means of example, reward, punishment, and suchlike.'
+%See also Russell (1921: 71): “A child learning to speak is learning habits and associations which are just as much determined by the environment as the habit of expecting dogs to bark and cocks to crow. The community that speaks a language has learnt it, and modified it by processes almost all of which are not deliberate, but the results of causes operating according to more or less ascertainable laws.”
+\end{quote}
+%
+If this sort of view were right, abilities to communicate linguistically would not necessarily depend on knowledge proper and so it would be possible to appeal to linguistic communication in explaining the developmental origins of knowledge.
+Against Wittgenstein, experimental findings support the hypothesis that children solve the mapping problem by general reasoning and rely on social cognition
+\citep{Baldwin:1995xl,Bloom:2000qz,Sabbagh:2001sp}. 
+%Also talk about language creation here (see lexical innovation paper)
+
+This hypothesis conflicts with Davidson's claims that having thoughts involves grasping the concept of truth \citep[p.\ 189]{Davidson:2001sm}, 
+% `What gives my belief its content ... is my knowledge of what is required for the belief ... to be true' \citep[p.\ 189]{Davidson:2001sm}, 
+and that `we grasp the concept of truth only when we can communicate the contents—the propositional contents—of the shared experience, and this requires language' \citep[p.\ 27]{Davidson:1997wj}.
+The objection to Davidson's view is that that it has things backwards: acquiring your first words already involves thinking about what they pick out. 
+If this objection is correct, can anything be salvaged from Davidson's arguments? 
+While the objection rules out claiming that being able to think depends on being able to communicate propositional contents using language, it leaves open the possibility that thought is essentially intersubjective.
+One challenge, then, is to explain the intersubjectivity of thought without appeal to communication by language.
+
+So far our focus has been the mapping problem, the problem of determining which words pick what out. 
+A distinct and no less difficult problem is how infants come to understand words as communicative tools at all.
+Merely associating a word or gesture with what it picks out would not enable an infant to respond appropriately to uses of that word or gesture, nor to use it intelligently. 
+After all, chimpanzees associate pointing gestures with their referents \citep[][p.\ 6]{Moll:2007gu} but fail to respond appropriately to helpful pointing gestures \citep{hare_chimpanzees_2004}. 
+Unlike chimpanzees, infants not only map words to what they pick out but also use and understand them as tools for communication. 
+What does this understanding amount to---in particular, do infants have an adult-like understanding of communicative intention---and how do infants acquire it?
+%On one view, it involves a special `action interpretation system' distinct from that involved in understanding ordinary, non-communicative action \citep[p.\ 456]{Csibra:2003kp}. 
+%***This question is pressing because we want to appeal to language to explain the emergence of full-blown mindreading
+Answering this question may require revisions or extensions to existing philosophical accounts of communication which often presuppose conceptual sophistication \citep[e.g.][]{Grice:1957kg}.
+
+
+
+
+\subsection{Chapter 6. Actions: Teleology and Motor Awareness}
 \label{ch:actions}
+***
 
-\subsection{Chapter 7. Mindreading}
+
+\subsection{Chapter 7. Beliefs}
+What is involved in representing belief?
+The following three claims are separately defensible but appear to be jointly inconsistent: 
+%
+\begin{enumerate}
+\item Infants can represent false beliefs from around their first birthday or earlier. \label{infant_fb}
+%
+\item  \label{fb_is_perspectives}  Being able to represent false beliefs involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both).
+%
+\item Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  \label{infant_perspectives}
+%
+\end{enumerate}
+%
+This chapter will first consider evidence and theoretical arguments in support of each claim in turn.  
+
+There is a growing body of evidence for (\ref{infant_fb}).
+From around their first birthday infants  predict actions of agents with false beliefs about the locations of objects \citep[]{Onishi:2005hm, Southgate:2007js}. 
+and choose different ways of interacting with others depending on whether their beliefs are true or false \citep[]{Buttelmann:2009gy,Knudsen:2011fk,southgate:2010fb}.  
+And in much the way that irrelevant facts about the contents of others’ beliefs modulate adult subjects’ response times, such facts also affect how long 7-month-old infants look at some stimuli \citep[]{kovacs_social_2010}.
+The variety of  measures---looking time, anticipatory looking, pointing and helping---makes it hard to dismiss these findings on methodological grounds.
+So we cannot straightforwardly reject (\ref{infant_fb}).
+
+Why accept (\ref{fb_is_perspectives})?  
+Part of the answer is theoretical. 
+On any standard view, beliefs are propositional attitudes and are individuated (at least in part) by their causal and normative roles in explaining thoughts and actions \citep[]{Davidson:1980xp, Davidson:1990du}.
+Representing states with these features arguably involves being able to process perspective differences and a core component of genuine counterfactual reasoning \citep{perner:2007_objects}. 
+Another part of the argument for accepting (\ref{fb_is_perspectives}) is empirical.
+Until they are around four years of age,
+children systematically fail a wide range of false belief tasks.
+These tasks are very varied: most are verbal but some are nonverbal (\citealp{Call:1999co}; \citealp{low:2010_preschoolers} Study 2),
+some involve prediction whereas others involve retrodiction or justification \citep[e.g.][]{Wimmer:1998kx},
+some concern the first-person perspective, whereas others involve a second- or third-person perspective \citep[e.g.][]{Gopnik:1991db},
+some involve interaction whereas in others the subject is a mere observer \citep[e.g.][]{Chandler:1989qa},
+and some involve prediction actions whereas others involve predicting desires \citep{Astington:1991kk} or selecting an argument appropriate for someone with a false belief \citep{Bartsch:2000es}. 
+Despite all this variation and more, these false belief tasks all appear to measure a single developmental transition \citep{Wellman:2001lz},
+and that developmental transition is linked to developments in abilities to process perspective difficulties \citep{Perner:2002jj} and to reason counterfactually \citep{rafetseder:2012_submitted}.
+While some researchers have claimed that the developmental transition these false belief tasks measure is not a transition in understanding belief 
+	(e.g.\ 
+	\citealp[][p.\ 417]{Carpenter:2002gc},
+	\citealp{Bloom:2000bt}, and
+	\citealp{Leslie:1998nq}),
+the wide variety of tasks used is evidence against such claims.
+So we cannot straightforwardly reject  (\ref{fb_is_perspectives}).
+
+Can we reject (\ref{infant_perspectives}), the claim that infants neither process perspective differences nor engage in counterfactual reasoning until they are at least one year old?
+One difficulty is that current developmental evidence almost uniformly supports this claim  \citep{rafetseder:2010_counterfactual,beck:2011_almost}.
+A second problem is that the development of abilities to reason counterfactually,
+%\footnote{Here and throughout I follow Eva Rafetseder in using the term `counterfactual reasoning'  to refer to reasoning which essentially involves comparing two possible situations; the term is sometimes used more broadly to include the sorts of representations involved in pretence.} 
+like the development of abilities to represent false belief,
+appears to involve working memory and inhibitory control 
+(on counterfactuals: 
+	\citealp{drayton:2011_counterfactual,beck:2011_supporting};
+on false beliefs: \citealp{apperly:2008_back, Apperly:2009cc}; \citealp{lin:2010_reflexively, McKinnon:2007rr} experiments 4-5; \citealp{saxe_reading_2006}).
+As even committed nativists are likely to agree, capacities for inhibitory control and working memory develop over several years and are limited in infants \citep[e.g.][]{carlson:2005_developmentally}.
+So we cannot straightforwardly reject (\ref{infant_perspectives}).
+
+
+
+If each of the three claims (1)-(3) is true, they cannot be inconsistent after all. 
+Can we avoid the apparent inconsistency by appealing to the distinction between core knowledge (or modular representation) and knowledge proper introduced in Chapter 2 (on Objects)?  
+One objection to such an appeal concerns the flexibility of false belief understanding in infants.
+One-year-old infants succeed on false belief tasks which involve actively helping others, interpreting their utterances and pointing to provide information \citep{Buttelmann:2009gy,Knudsen:2011fk,southgate:2010fb}. 
+By contrast, core knowledge is supposed to have only limited consequences for purposive action.
+
+To the apparent inconsistency of (1)-(3) there are three main responses.
+One is to reject (1) \citep[e.g.][]{Perner:2005hq}, 
+another is to reject (2),
+ and a third is to argue that the inconsistency is only apparent by appeal to a distinction such as that between core knowledge and knowledge proper \citep[e.g.][]{Clements:1994cw,low:2010_preschoolers}.
+We have seen objections to each of these responses.
+This indicates that we do not adequately understand what is involved in representing beliefs and, more generally, what it is to have a theory of mind.
+
+%This is intended as leading in to measurement and minimal theory of mind
 
 \subsection{Conclusion}
+Are we closer to understanding 
+how humans come to know about %
+objects,
+causes,
+words,
+numbers,
+colours,
+actions
+and
+minds? 
+***
 
 
 \bibliography{$HOME/endnote/phd_biblio}
