--- a/mindreading/conf espp 2012 symposium false belief counterfactuals perspective schurz rafetseder/false beliefs, perspectives and counterfactuals espp 2012 symposium submission.tex
+++ b/mindreading/conf espp 2012 symposium false belief counterfactuals perspective schurz rafetseder/false beliefs, perspectives and counterfactuals espp 2012 symposium submission.tex
@@ -38,7 +38,7 @@ This talk starts with three claims that are separately defensible but appear to 
 %
 \item  \label{fb_is_perspectives}  Being able to represent false beliefs involves being able to  (i) process perspective differences or (ii) reason counterfactually (or both).
 %
-\item Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  \label{infant_perspectives}
+\item Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are well over one year old.  \label{infant_perspectives}
 %
 \end{enumerate}
 %
@@ -75,7 +75,7 @@ Here and below I'm save words by not carefully distinguishing
  cognitive claims about what exercising an ability to represent false belief requires (Matthias' main concern).
 }
 
-\item Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are at least one year old.  \label{infant_perspectives}
+\item Infants cannot (i) process perspective differences nor (ii) engage in counterfactual reasoning until they are well over one year old.  \label{infant_perspectives}
 
 \end{enumerate}
 %
@@ -170,7 +170,7 @@ some involve interaction whereas in others the subject is a mere observer \citep
 and some involve prediction actions whereas others involve predicting desires \citep{Astington:1991kk} or selecting an argument appropriate for someone with a false belief \citep{Bartsch:2000es}.
 Despite all this variation and more, the Category A tasks all appear to measure a single developmental transition \citep{Wellman:2001lz}.
 This is a significant obstacle to identifying the Extraneous Requirement.
-In fact, my view the currently available evidence supports the conclusion that there is no Extraneous Requirement.
+In fact, in my view the currently available evidence supports the conclusion that there is no Extraneous Requirement.
 And as far as I know the only plausible candidate for the transition  Category A tasks measure is a transition in the ability to represent beliefs.
 This is why I don't think that we can straightforwardly reject  (\ref{fb_is_perspectives}).
 
